# helpertools

./: .clang-format  CMakeLists.txt  README.md  notes.md
src/: CMakeLists.txt  helpertools.cpp  helpertools.h
test/: CMakeLists.txt  helpertools_test.cpp
